--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@types/csv-parse": "^1.1.12",
     "csv-parse": "^5.6.0",
     "next": "15.3.2",
+    "pg": "^8.11.3",
     "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
-    "sqlite3": "^5.1.7",
     "stripe": "^18.1.1",
     "yet-another-react-lightbox": "^3.23.2"
   },
@@ -27,6 +27,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.10.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
