🚀 Major improvements: Database recovery, backup system, and enhanced UX - Recovered from corrupted database (170 → 84 properly categorized books) - Added comprehensive backup/restore system with timestamped backups - Created seedDatabase.ts with 16 curated Islamic books for development - Enhanced book categorization and author attribution - Fixed placeholder image errors with beautiful SVG placeholder - Updated all image references and enhanced Islamic aesthetic - 84 Islamic books across 8 categories with 20+ different authors - Added npm scripts for database management and comprehensive README - Fixed Next.js build manifest errors and improved cart functionality

--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "build": "npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "npx prisma generate"
+    "postinstall": "npx prisma generate",
+    "db:backup": "npx tsx scripts/backupDatabase.ts",
+    "db:restore": "npx tsx scripts/restoreFromBackup.ts",
+    "db:migrate": "npx prisma migrate dev",
+    "db:reset": "npx prisma migrate reset",
+    "db:seed": "npx tsx scripts/seedDatabase.ts",
+    "books:add": "npx tsx scripts/addSingleBook.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
