Update admin book form, backup/restore docs, and API for delete; clarify category ID guidance

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,13 @@ next-env.d.ts
 
 /src/generated/prisma
 .env*.local
+
+# compiled output
+/dist
+/dist-scripts/
+
+# Local backups
+/backups/
+
+# environment variables
+.env
