--- a/package.json
+++ b/package.json
@@ -8,21 +8,20 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "npx prisma generate",
-    "db:backup": "npx tsx scripts/backupDatabase.ts",
+    "db:backup": "npx tsx scripts/createBackup.ts",
     "db:restore": "npx tsx scripts/restoreFromBackup.ts",
     "db:migrate": "npx prisma migrate dev",
     "db:reset": "npx prisma migrate reset",
-    "db:seed": "npx tsx scripts/seedDatabase.ts",
-    "books:add": "npx tsx scripts/addSingleBook.ts"
+    "db:seed": "npx tsx scripts/seedDatabase.ts"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
     "@prisma/client": "^6.8.2",
     "@stripe/stripe-js": "^7.3.0",
     "@types/csv-parse": "^1.1.12",
     "csv-parse": "^5.6.0",
     "next": "15.3.2",
     "pg": "^8.11.3",
-    "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
@@ -32,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.53.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/pg": "^8.10.9",
@@ -39,6 +39,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "prisma": "^6.10.1",
     "tailwindcss": "^4.1.7",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
