Add Vercel Speed Insights, update README, and document Order API

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^6.8.2",
     "@stripe/stripe-js": "^7.3.0",
     "@types/csv-parse": "^1.1.12",
+    "@vercel/speed-insights": "^1.2.0",
     "csv-parse": "^5.6.0",
     "next": "15.3.2",
     "node-fetch": "^2.7.0",
