feat: UI improvements, image path fixes, addBook/fixBookImagePaths scripts, and sort by option

--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "build": "npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "npx prisma generate",
+    "postinstall": "npx prisma generate && npx prisma migrate deploy",
+    "studio": "npx prisma studio",
     "db:backup": "npx tsx scripts/createBackup.ts",
     "db:restore": "npx tsx scripts/restoreFromBackup.ts",
     "db:migrate": "npx prisma migrate dev",
     "db:reset": "npx prisma migrate reset",
-    "db:seed": "npx tsx scripts/seedDatabase.ts"
+    "db:seed": "npx tsx scripts/seedDatabase.ts",
+    "migrate:status": "npx prisma migrate status",
+    "typecheck": "tsc --noEmit",
+    "start:prod": "npm run build && npm run start",
+    "test": "playwright test"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
@@ -20,7 +25,9 @@
     "@stripe/stripe-js": "^7.3.0",
     "@types/csv-parse": "^1.1.12",
     "@vercel/speed-insights": "^1.2.0",
+    "clsx": "^2.1.1",
     "csv-parse": "^5.6.0",
+    "keen-slider": "^6.8.6",
     "next": "15.3.2",
     "node-fetch": "^2.7.0",
     "pg": "^8.11.3",
