feat: implement comprehensive promo code system with admin interface
- Add PromoCode model to database schema with validation rules
- Create promo code validation API endpoint
- Implement promo code input field on cart page with real-time validation
- Add dynamic promo code validation when cart contents change
- Create admin interface for managing promo codes
- Update Stripe checkout to apply discounts proportionally to products only
- Add webhook handling to track promo code usage
- Update README with promo code system documentation
- Remove tax line item from cart order summary
- Add sample promo codes (WELCOME10, SAVE5, RAMADAN20)
- Fix discount calculation to exclude shipping costs

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:migrate": "npx prisma migrate dev",
     "db:reset": "npx prisma migrate reset",
     "db:seed": "npx tsx scripts/seedDatabase.ts",
+    "db:update-images": "npx tsx scripts/updateBookImages.ts",
     "migrate:status": "npx prisma migrate status",
     "typecheck": "tsc --noEmit",
     "lintcheck": "npm run lint",
@@ -29,7 +30,7 @@
     "clsx": "^2.1.1",
     "csv-parse": "^5.6.0",
     "keen-slider": "^6.8.6",
-    "next": "15.3.2",
+    "next": "^15.4.4",
     "node-fetch": "^2.7.0",
     "pg": "^8.11.3",
     "react": "^19.0.0",
