Add book format field and clean up book titles
- Add format field to Book model in Prisma schema
- Create migration for format field
- Update all TypeScript interfaces to include format field
- Add format display to BookDetailClient, BookGrid, Cart, and Admin components
- Create extractBookFormats script to populate format field from titles
- Create cleanBookTitles script to remove format suffixes from titles
- Update API routes to handle format field
- Improve SearchSection responsive design for mobile
- Side-by-side layout for author and format on book details page

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "db:reset": "npx prisma migrate reset",
     "db:seed": "npx tsx scripts/seedDatabase.ts",
     "db:update-images": "npx tsx scripts/updateBookImages.ts",
+    "db:extract-formats": "npx tsx scripts/extractBookFormats.ts",
+    "db:clean-titles": "npx tsx scripts/cleanBookTitles.ts",
     "migrate:status": "npx prisma migrate status",
     "typecheck": "tsc --noEmit",
     "lintcheck": "npm run lint",
