feat: add comprehensive E2E test suite and improve Stripe configuration
- Add Playwright test suite with 8 E2E tests (book purchase, cart management, search)
- Implement Page Object Model pattern for maintainable tests
- Add route interception to prevent stock updates during tests
- Add Stripe configuration guides (STRIPE_SETUP.md, STRIPE_ENVIRONMENT_GUIDE.md)
- Secure .env.production from being committed to git
- Add test data fixtures and API helpers
- Add database backup/restore scripts
- Resolve merge conflicts in payment-links page and README
- Add data-testid attributes for reliable test selectors
- Update stock manager with better error handling

--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "typecheck": "tsc --noEmit",
     "lintcheck": "npm run lint",
     "start:prod": "npm run build && npm run start",
-    "test": "playwright test"
+    "test": "playwright test",
+    "test:headed": "playwright test --headed",
+    "test:ui": "playwright test --ui",
+    "test:debug": "playwright test --debug",
+    "test:report": "playwright show-report test-results/html-report",
+    "test:codegen": "playwright codegen http://localhost:3000",
+    "test:prod": "NODE_ENV=production playwright test"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
